# r-star-tree

./: CMakeLists.txt
rstartree/: CMakeLists.txt  boundingbox.h  rstartree.h
tests/: CMakeLists.txt  tests.cpp
